resolve some view issues for working on deskop, ipad pro and mobile, collapsing the button and showing the music button

--- a/src/assets/styles/navbar.css
+++ b/src/assets/styles/navbar.css
@@ -17,11 +17,11 @@
   box-shadow: inset 0 -4px 0 0 var(--second-color);
 }
 
-.idioma {
+.margin-auto {
   margin: auto;
 }
 
-.idioma select {
+.margin-auto select {
   background-color: var(--navbar-hover-color) !important;
   border: 1px solid var(--second-color);
   color: white;
@@ -43,16 +43,19 @@
   padding: 0px;
   height: auto;
   cursor: pointer;
+  margin-right: auto;
 }
 
+/*
 .navbar-toggler {
   margin: auto;
 }
-
+*/
+/*
 .nav-inline {
   margin: auto;
 }
-
+*/
 .blinker {
   animation: blinker 0.5s cubic-bezier(.5, 0, 1, 1) infinite alternate;
   color: var(--white-text-color);
